Fixed uneven ingredient card sizes

--- a/css/explore.css
+++ b/css/explore.css
@@ -13,8 +13,9 @@
     padding: 10px;
     background-color: white;
     box-shadow: 1px 1px 6px #bbbbbb;
-    text-align: center;
+/*    text-align: center;*/
     position: absolute;
+    width: 270px;
 }
 
 .heartIcon {
@@ -37,7 +38,8 @@
 
 .sliderImg {
     height: 320px;
-    width: 250px;
+/*    width: 250px;*/
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -54,6 +56,9 @@
 .sliderCard h3 {
     margin-top: 10px;
     color: #4f4e4e;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .sliderCard h6 {
